advanced/external-dns/customers_svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-extdns-customers-svc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: externaldns.jackburton.io.
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: customers
