advanced/external-dns/customers_svc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: via-ingress.externaldns.jackburton.io
      http:
        paths:
          - backend:
              serviceName: go-extdns-customers-svc
              servicePort: 80
